--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Coming Soon!</h1>
+<h1>To What Page do You Want to Go?</h1>
+<!DOCTYPE html>
+<html>
+<body>
+Software
+<a href="https://ConsoleTech.github.io/ConsoleSite/Software.html">
+<button class="button"> Go </button>
+</body>
+</html>
+Minecraft Realm
+<a href="https://ConsoleTech.github.io/ConsoleSite/Realm.html">
+<button class="button"> Go </button>
+</body>
+</html>
